--- a/Brainf_ck-sharp.UWP/UserControls/DataTemplates/SavedSourceCodeTemplate.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/DataTemplates/SavedSourceCodeTemplate.xaml
@@ -28,12 +28,24 @@
                     <VisualState.Setters>
                         <Setter 
                             Target="RootGrid.Background"
-                            Value="#05FFFFFF"/>
+                            Value="#04FFFFFF"/>
                     </VisualState.Setters>
                 </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
-        
+
+        <!--Wide light border-->
+        <Border
+            x:Name="LightBackground"
+            Opacity="0"
+            Background="{StaticResource PopupElementsWideLightBrush}"/>
+
+        <!--Light border-->
+        <Border
+            Opacity="0.6"
+            BorderThickness="2"
+            BorderBrush="{StaticResource PopupElementsLightBrush}"/>
+
         <!--Content-->
         <StackPanel VerticalAlignment="Center"
                     Margin="12,12,16,12">
