--- a/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/VirtualArrowsKeyboardControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/VirtualArrowsKeyboardControl.xaml
@@ -71,20 +71,23 @@
             Grid.Column="0"
             Grid.ColumnSpan="3"
             VerticalAlignment="Top"
-            Fill="{StaticResource PopupElementsLightBrush}"/>
+            Fill="{StaticResource PopupElementsLightBrush}"
+            Opacity="0.6"/>
         <Rectangle
             Width="1"
             Grid.Row="0"
             Grid.RowSpan="2"
             Grid.Column="1"
             HorizontalAlignment="Left"
-            Fill="{StaticResource PopupElementsLightBrush}"/>
+            Fill="{StaticResource PopupElementsLightBrush}"
+            Opacity="0.6"/>
         <Rectangle
             Width="1"
             Grid.Row="0"
             Grid.RowSpan="2"
             Grid.Column="1"
             HorizontalAlignment="Right"
-            Fill="{StaticResource PopupElementsLightBrush}"/>
+            Fill="{StaticResource PopupElementsLightBrush}"
+            Opacity="0.6"/>
     </Grid>
 </UserControl>
