--- a/Brainf_ck-sharp.UWP/Styles/MenuFlyoutStyles.xaml
+++ b/Brainf_ck-sharp.UWP/Styles/MenuFlyoutStyles.xaml
@@ -12,6 +12,8 @@
     <SolidColorBrush x:Key="MenuFlyoutBackgroundColor" Color="#FF282828"/>
     <SolidColorBrush x:Key="MenuFlyoutBorderBrush" Color="#FF454545"/>
     <x:Double x:Key="MenuFlyoutTextSize">14</x:Double>
+    <SolidColorBrush x:Key="MenuFlyoutPointerOverHighlightBrush" Color="#10FFFFFF"/>
+    <SolidColorBrush x:Key="MenuFlyoutPointerPressedHighlightBrush" Color="#14FFFFFF"/>
 
     <!-- Default style for Windows.UI.Xaml.Controls.MenuFlyoutPresenter -->
     <Style TargetType="MenuFlyoutPresenter">
@@ -31,7 +33,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="MenuFlyoutPresenter">
-                    <Grid>
+                    <inheritedControls:LightsContainerGrid>
                         <inheritedControls:InAppAcrylicGrid DisposeOnUnload="True"/>
                         <Grid Background="{TemplateBinding Background}"
                               x:Name="ContentGrid">
@@ -53,7 +55,7 @@
                                     BorderBrush="{TemplateBinding BorderBrush}"
                                     BorderThickness="{TemplateBinding BorderThickness}"/>
                         </Grid>
-                    </Grid>
+                    </inheritedControls:LightsContainerGrid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -90,13 +92,16 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="MenuFlyoutSubItem">
-                    <Grid x:Name="LayoutRoot"
-                          Padding="0,8,0,8"
-                          BorderBrush="#FF757575" 
-                          BorderThickness="{TemplateBinding BorderThickness}"
-                          MinHeight="{StaticResource MenuFlyoutMinHeight}"
-                          MinWidth="{StaticResource MenuFlyoutMinWidth}"
-                          MaxWidth="{StaticResource MenuFlyoutMaxWidth}">
+                    <inheritedControls:LightBorderAndBackgroundOverlay 
+                        x:Name="LayoutRoot"
+                        Padding="0"
+                        BorderBrush="#FF757575" 
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        MinHeight="{StaticResource MenuFlyoutMinHeight}"
+                        MinWidth="{StaticResource MenuFlyoutMinWidth}"
+                        MaxWidth="{StaticResource MenuFlyoutMaxWidth}"
+                        LightBorderBrush="{StaticResource BorderLightBrush}"
+                        LightBackgroundBrush="{StaticResource ElementsWideLightBrush}">
                         <VisualStateManager.VisualStateGroups>
                             <VisualStateGroup x:Name="CommonStates">
                                 <VisualState x:Name="Normal" />
@@ -118,6 +123,10 @@
                                 </VisualState>
                                 <VisualState x:Name="Pressed">
                                     <Storyboard>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="LayoutRoot"
+                                                                       Storyboard.TargetProperty="Background">
+                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource SubMenuFlyoutPointerPressedBrush}" />
+                                        </ObjectAnimationUsingKeyFrames>
                                         <ObjectAnimationUsingKeyFrames Storyboard.TargetName="TextBlock"
                                                                        Storyboard.TargetProperty="Foreground">
                                             <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlHighlightAltBaseHighBrush}" />
@@ -166,7 +175,7 @@
                                 <VisualState x:Name="NarrowPadding"/>
                             </VisualStateGroup>
                         </VisualStateManager.VisualStateGroups>
-                        <Grid>
+                        <Grid Padding="0,8,0,8">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="Auto" />
@@ -190,7 +199,7 @@
                                       Foreground="{ThemeResource SystemControlForegroundBaseMediumHighBrush}"
                                       MirroredWhenRightToLeft="True" />
                         </Grid>
-                    </Grid>
+                    </inheritedControls:LightBorderAndBackgroundOverlay>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -201,21 +210,24 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="MenuFlyoutItem">
-                    <Grid x:Name="LayoutRoot" 
-                          Padding="0,8,0,8" 
-                          Background="{StaticResource MenuFlyoutBackgroundBrush}"
-                          BorderBrush="#FF757575" 
-                          BorderThickness="{TemplateBinding BorderThickness}" 
-                          MinHeight="{StaticResource MenuFlyoutMinHeight}"
-                          MinWidth="{StaticResource MenuFlyoutMinWidth}"
-                          MaxWidth="{StaticResource MenuFlyoutMaxWidth}">
+                    <inheritedControls:LightBorderAndBackgroundOverlay 
+                        x:Name="LayoutRoot" 
+                        Padding="0" 
+                        Background="{StaticResource MenuFlyoutBackgroundBrush}"
+                        BorderBrush="#FF757575" 
+                        BorderThickness="{TemplateBinding BorderThickness}" 
+                        MinHeight="{StaticResource MenuFlyoutMinHeight}"
+                        MinWidth="{StaticResource MenuFlyoutMinWidth}"
+                        MaxWidth="{StaticResource MenuFlyoutMaxWidth}"
+                        LightBorderBrush="{StaticResource BorderLightBrush}"
+                        LightBackgroundBrush="{StaticResource ElementsWideLightBrush}">
                         <VisualStateManager.VisualStateGroups>
                             <VisualStateGroup x:Name="CommonStates">
                                 <VisualState x:Name="Normal" />
                                 <VisualState x:Name="PointerOver">
                                     <Storyboard>
                                         <ObjectAnimationUsingKeyFrames Storyboard.TargetName="LayoutRoot" Storyboard.TargetProperty="Background">
-                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlHighlightListLowBrush}" />
+                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource MenuFlyoutPointerOverHighlightBrush}" />
                                         </ObjectAnimationUsingKeyFrames>
                                         <ObjectAnimationUsingKeyFrames Storyboard.TargetName="TextBlock" Storyboard.TargetProperty="Foreground">
                                             <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlHighlightAltBaseHighBrush}" />
@@ -225,7 +237,7 @@
                                 <VisualState x:Name="Pressed">
                                     <Storyboard>
                                         <ObjectAnimationUsingKeyFrames Storyboard.TargetName="LayoutRoot" Storyboard.TargetProperty="Background">
-                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlHighlightListMediumBrush}" />
+                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource MenuFlyoutPointerPressedHighlightBrush}" />
                                         </ObjectAnimationUsingKeyFrames>
                                         <ObjectAnimationUsingKeyFrames Storyboard.TargetName="TextBlock" Storyboard.TargetProperty="Foreground">
                                             <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlHighlightAltBaseHighBrush}" />
@@ -262,8 +274,9 @@
                                 <VisualState x:Name="NarrowPadding"/>
                             </VisualStateGroup>
                         </VisualStateManager.VisualStateGroups>
-
-                        <StackPanel Orientation="Horizontal">
+                        <StackPanel 
+                            Orientation="Horizontal"
+                            Padding="0,8,0,8">
                             <FontIcon  x:Name="TextBlock" 
                                        Margin="16,0,0,0"
                                        Glyph="{TemplateBinding Tag}" 
@@ -279,7 +292,7 @@
                                        FontWeight="SemiLight"
                                        FontSize="{StaticResource MenuFlyoutTextSize}"/>
                         </StackPanel>
-                    </Grid>
+                    </inheritedControls:LightBorderAndBackgroundOverlay>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
