--- a/Brainf_ck-sharp.UWP/Resources/BrushesDictionary.xaml
+++ b/Brainf_ck-sharp.UWP/Resources/BrushesDictionary.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:brushes="using:UICompositionAnimations.Brushes">
 
     <!--Default fade out accent brush (button normal state)-->
     <SolidColorBrush x:Key="AccentBrushLowFade"/>
@@ -25,4 +26,13 @@
     
     <!--Misc-->
     <SolidColorBrush x:Key="ShellSeparatorLineFillBrush" Color="#FF6E6E6E"/>
+    
+    <!--Acrylic brush-->
+    <brushes:CustomAcrylicBrush
+        x:Key="InAppGrayAcrylicBrush"
+        Mode="InAppBlur"
+        BlurAmount="8"
+        Tint="#FF222222"
+        TintMix="0.6"
+        NoiseTextureUri="/Assets/Misc/noise.png"/>
 </ResourceDictionary>
