--- a/Brainf_ck-sharp.UWP/Styles/MiscStyles.xaml
+++ b/Brainf_ck-sharp.UWP/Styles/MiscStyles.xaml
@@ -2,7 +2,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:inheritedControls="using:Brainf_ck_sharp_UWP.UserControls.InheritedControls"
-    xmlns:customCommandBar="using:Brainf_ck_sharp_UWP.UserControls.InheritedControls.CustomCommandBar">
+    xmlns:customCommandBar="using:Brainf_ck_sharp_UWP.UserControls.InheritedControls.CustomCommandBar"
+    xmlns:brushes="using:UICompositionAnimations.Brushes">
 
     <!--Custom Pivot without margins and headers-->
     <Style TargetType="Pivot" x:Key="PivotCustomStyle">
@@ -529,7 +530,6 @@
 
     <!-- Default style for Windows.UI.Xaml.Controls.CommandBarOverflowPresenter -->
     <Style TargetType="CommandBarOverflowPresenter" x:Key="AcrylicCommandBarOverflowPresenter">
-        <Setter Property="Background" Value="Transparent" />
         <Setter Property="BorderBrush" Value="{ThemeResource CommandBarOverflowPresenterBorderBrush}" />
         <Setter Property="MaxWidth" Value="{ThemeResource CommandBarOverflowMaxWidth}" />
         <Setter Property="ScrollViewer.HorizontalScrollMode" Value="Disabled" />
@@ -543,10 +543,10 @@
             <Setter.Value>
                 <ControlTemplate TargetType="CommandBarOverflowPresenter">
                     <Grid x:Name="LayoutRoot"
-                          Background="{TemplateBinding Background}"
                           Padding="{TemplateBinding Padding}"
                           BorderBrush="{TemplateBinding BorderBrush}"
-                          BorderThickness="1,1,1,1">
+                          BorderThickness="1,1,1,1"
+                          Background="{StaticResource InAppGrayAcrylicBrush}">
                         <VisualStateManager.VisualStateGroups>
                             <VisualStateGroup x:Name="DisplayModeStates">
                                 <VisualState x:Name="DisplayModeDefault" />
@@ -562,7 +562,6 @@
                                 </VisualState>
                             </VisualStateGroup>
                         </VisualStateManager.VisualStateGroups>
-                        <inheritedControls:InAppAcrylicGrid/>
                         <ScrollViewer HorizontalScrollMode="{TemplateBinding ScrollViewer.HorizontalScrollMode}"
                                       HorizontalScrollBarVisibility="{TemplateBinding ScrollViewer.HorizontalScrollBarVisibility}"
                                       VerticalScrollMode="{TemplateBinding ScrollViewer.VerticalScrollMode}"
