Reduced the number of light brushes in the app

--- a/Brainf_ck-sharp.UWP/PopupService/UI/FlyoutContainer.xaml
+++ b/Brainf_ck-sharp.UWP/PopupService/UI/FlyoutContainer.xaml
@@ -85,14 +85,14 @@
                     <Border
                         x:Name="BackgroundBorder"
                         Opacity="0"
-                        Background="{StaticResource PopupElementsWideLightBrush}"/>
+                        Background="{StaticResource ElementsWideLightBrush}"/>
                     
                     <!--Light border-->
                     <Border
                         Opacity="0.4"
                         x:Name="LightBorder"
                         BorderThickness="2"
-                        BorderBrush="{StaticResource PopupElementsLightBrush}"
+                        BorderBrush="{StaticResource BorderLightBrush}"
                         Margin="-2"/>
                     
                     <!--Close icon-->
@@ -131,13 +131,13 @@
                 <Border
                     x:Name="ConfirmBackgroundBorder"
                     Opacity="0"
-                    Background="{StaticResource PopupElementsWideLightBrush}"/>
+                    Background="{StaticResource ElementsWideLightBrush}"/>
 
                 <!--Light border-->
                 <Border
                     Opacity="0.4"
                     BorderThickness="2"
-                    BorderBrush="{StaticResource PopupElementsLightBrush}"/>
+                    BorderBrush="{StaticResource BorderLightBrush}"/>
                 
                 <!--Confirm text-->
                 <TextBlock 
