--- a/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/Controls/VirtualArrowKeyboardButton.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/Controls/VirtualArrowKeyboardButton.xaml
@@ -29,7 +29,7 @@
             <!--Wide light border-->
             <Border
                 x:Name="BackgroundBorder"
-                Background="{StaticResource PopupElementsWideLightBrush}"
+                Background="{StaticResource ElementsWideLightBrush}"
                 Opacity="0"/>
             
             <!--Icon-->
