--- a/Brainf_ck-sharp.UWP/UserControls/CustomControls/IDESessionBreakpointOptionControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/CustomControls/IDESessionBreakpointOptionControl.xaml
@@ -36,13 +36,13 @@
         <Border
             x:Name="LightBackground"
             Opacity="0"
-            Background="{StaticResource PopupElementsWideLightBrush}"/>
+            Background="{StaticResource ElementsWideLightBrush}"/>
 
         <!--Light border-->
         <Border
             Opacity="0.6"
             BorderThickness="2"
-            BorderBrush="{StaticResource PopupElementsLightBrush}"/>
+            BorderBrush="{StaticResource BorderLightBrush}"/>
 
         <!--Content-->
         <Grid HorizontalAlignment="Center">
