--- a/Brainf_ck-sharp.UWP/UserControls/DataTemplates/SavedSourceCodeTemplate.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/DataTemplates/SavedSourceCodeTemplate.xaml
@@ -38,13 +38,13 @@
         <Border
             x:Name="LightBackground"
             Opacity="0"
-            Background="{StaticResource PopupElementsWideLightBrush}"/>
+            Background="{StaticResource ElementsWideLightBrush}"/>
 
         <!--Light border-->
         <Border
             Opacity="0.6"
             BorderThickness="2"
-            BorderBrush="{StaticResource PopupElementsLightBrush}"/>
+            BorderBrush="{StaticResource BorderLightBrush}"/>
 
         <!--Content-->
         <StackPanel VerticalAlignment="Center"
